--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-/* App.css */
-
 @font-face {
   font-family: 'Space Mono';
   src: url('./fonts/Space_Mono/SpaceMono-Regular.ttf') format('truetype');
@@ -18,6 +16,9 @@ nav, ul {
   padding: 0;
   list-style: none;
   text-align: center;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 nav ul li.active {
@@ -26,6 +27,13 @@ nav ul li.active {
   padding: 5px 10px; /* Add padding to make it visually distinct */
   border-radius: 5px; /* Add rounded corners for style */
 }
+
+.navbar-logo {
+  width: 250px;
+  height: 100px;
+  padding: 10px;
+}
+
 
 li {
   text-align: center;
@@ -37,46 +45,80 @@ li {
 
 }
 
-.nfl-schedule {
-  text-align: center;
-  font-family: 'Space Mono';
-  background-color: #f2F1f0;
-}
-
 .week-selector {
-  margin-bottom: 20px;
+  display: flex;
+  padding: 20px;
+  font-weight: bold;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  font-family: 'Prompt';
+  color: #6B5045;
+  
 }
 
 .week-selector label {
-  font-weight: bold;
   margin-right: 10px;
 }
 
-#weekSelect {
-  padding: 5px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  font-size: 16px;
-}
+
+/* Grid */
 
 .games-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  align-content: flex-start;
+  justify-content: space-evenly;
 }
 
+/* Set a fixed width for the game boxes */
 .game-box {
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 10px;
-  margin: 10px;
-  width: 250px;
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+  height: 150px;
+  padding: 0;
+  margin: 25px 18px;
+  font-size: .75rem;
+  font-family: 'Space Mono';
+  text-align: center;
+  border-radius: 10px;
+  border: 2px solid grey;
+}
+
+.game-table {
+  padding: 1rem;
+
+  text-align: left;
+  font-family: 'Space Mono';
+  font-size: medium;
+  
+  height: 100%;
+  width: 100%;
+  
+}
+
+th {
+  padding: 1%;
+  background-color: #FFAF5D;
+  border-radius: 10px;
   text-align: center;
 }
 
-.team-logo img {
-  max-width: 100px;
-  max-height: 60px;
+td {
+  text-align: center;
+  padding: 0;
 }
 
-/* Define additional styles for other elements if needed */
+.team-name {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.team-logo {
+  padding-right: 10px;
+  width: 35px;
+  height: 35px;
+}
