--- a/src/css/ScheduleMLB.css
+++ b/src/css/ScheduleMLB.css
@@ -8,12 +8,15 @@
     src: url('../fonts/Space_Mono/Prompt-Black.ttf') format('truetype');
   } */
 
-.game-container {
-    margin-bottom: 20px;
+.games-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    justify-content: space-evenly;
 }
 
 .game-date {
-    font-family: 'Prompt';
+    font-family: 'Space Mono';
     font-weight: bold;
     text-align: center;
     font-size: 1.2em;
@@ -21,16 +24,26 @@
 }
 
 .game-box {
-    border: 1px solid #ccc; /* Adjust border color */
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+    height: 150px;
+    padding: 0;
+    margin: 25px 18px;
+    font-size: .75rem;
+    font-family: 'Space Mono';
     border-radius: 10px;
-    padding: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
+    border: 2px solid grey;
+  }
 
-.game-table {
+  .game-table {
+    padding: 1rem;
+    text-align: left;
+    font-family: 'Space Mono';
+    font-size: 14.5px;
+    height: 100%;
     width: 100%;
-    text-align: center;
-}
+  }
 
 .game-table th {
     background-color: #f4a261; /* Adjust color to fit your theme */
