--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -13,6 +13,7 @@ body {
   max-width: 750px;
   margin: 4rem auto;
   padding: 0 1rem;
+  text-align: center;
 }
 
 .markdown-container h1 {
@@ -29,8 +30,9 @@ body {
 }
 
 .markdown-container p {
-  font-size: 1.125rem;
+  font-size: 1rem;
   margin-bottom: 1.25rem;
+  text-align: justify
 }
 
 .markdown-container a {
