--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,5 +1,4 @@
-/* Home.css */
-
+/* Base styles */
 body {
   font-family: "et-book", Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
   background-color: #F2F1EF;
@@ -7,15 +6,23 @@ body {
   line-height: 1.6;
   margin: 0;
   padding: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
+/* Markdown container */
 .markdown-container {
   max-width: 750px;
   margin: 4rem auto;
   padding: 0 1rem;
   text-align: center;
+  overflow-x: hidden;
+  word-wrap: break-word;
+  white-space: normal;
 }
 
+/* Headers */
 .markdown-container h1 {
   font-size: 3rem;
   font-weight: normal;
@@ -29,12 +36,15 @@ body {
   margin-bottom: 1rem;
 }
 
+/* Paragraphs */
 .markdown-container p {
   font-size: 1rem;
   margin-bottom: 1.25rem;
-  text-align: justify
+  text-align: justify;
+  word-break: break-word;
 }
 
+/* Links */
 .markdown-container a {
   color: #111;
   border-bottom: 1px solid #111;
@@ -46,6 +56,7 @@ body {
   border-color: #444;
 }
 
+/* Nav */
 nav {
   font-family: "Prompt", sans-serif;
   background-color: transparent;
@@ -69,6 +80,7 @@ nav a.active {
   border-radius: 5px;
 }
 
+/* Footer */
 footer {
   text-align: center;
   font-size: 0.875rem;
